<resources>
    <string name="app_name">android-mvvm-testfield</string>
    <string name="hint_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_content">Content</string>
    <string name="btn_publish">Publish</string>
    <string name="btn_update">Update</string>
    <string name="alert_dialog_title_confirm">Confirmation</string>
    <string name="alert_dialog_message_delete">Are you sure you want to delete this post?</string>
    <string name="alert_dialog_delete">Delete</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="toast_text_require_title">The Title field cannot be empty!</string>
    <string name="lang_de">DE</string>
    <string name="lang_en">EN</string>
</resources>
